feat(sidebar): very simple toc

--- a/_config.template.yml
+++ b/_config.template.yml
@@ -46,6 +46,13 @@ post:
 appbar:
     min2read: false # hexo-wordcount
 
+sidebar:
+    toc:
+        enable: true
+        list_number: false
+        collapse_item_open: true
+        divider: true
+
 footer:
     copyright_since: 
     hostedon: 
